Better support for touch.